--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: ^1.2.0
   geocoding: ^2.1.1
   flutter_stripe: ^10.0.0
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies: 
   #flutter_lints: ^3.0.1
