--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   geocoding: ^2.1.1
   flutter_stripe: ^10.0.0
   salomon_bottom_bar: ^3.3.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies: 
   #flutter_lints: ^3.0.1
